# flaim-app

./: CLAUDE.md  README.md
espn-api-util/: .dockerignore  .env.example  Dockerfile.apisix  Dockerfile.mcp  README.md  debug-bridge.sh  docker-compose.yml  mcp_espn_bridge_plan.md  mcp_espn_fastapi_plan.md  pyproject.toml  route-config.json  setup.sh  start-bridge.sh  start-dev.sh  stop-bridge.sh  test-bridge.sh
espn-api-util/baseball_mcp/: __init__.py  auth.py  baseball_mcp_server.py  draft.py  espn_api_patch.py  league.py  matchups.py  metadata.py  players.py  roster.py  transactions.py  utils.py
espn-api-util/conf/: apisix.yaml  config.yaml  nginx.conf
espn-api-util/monitoring/: prometheus.yml
