[tool.poetry]
name = "espn-baseball-mcp"
version = "0.1.0"
description = "ESPN Fantasy Baseball MCP server providing comprehensive access to fantasy baseball data through Claude Desktop"
readme = "README.md"
authors = ["FLAIM Team"]
packages = [{include = "baseball_mcp"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
espn-api = "^0.45.0"
mcp = {extras = ["cli"], version = "^1.5.0"}
rapidfuzz = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
